2008-09-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 551410 – gtestutils.c: using printf without prototype

	* glib/gtestutils.c: Include stdio.h. Pointed out by Kazuki Iwamoto.

2008-09-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 551228 – G_STRFUNC on recent Sun compiler should be expanded to
	__func__ rather than '???'

	* glib/gmacros.h: Don't use glibconfig.h defines in gmacros.h,
	as the comment up top says. Instead look at __STDC_VERSION__.
	Problem reported by Lin Ma.

2008-09-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 523463 – Core dump in gmain.c:2482:IA__g_main_context_check()

	* glib/gmain.c (g_main_context_check): Be robust against setting
	event fields on the fly, as e.g. happens in linc. Tracked down
	by Paul Smith, fix proposed by Owen Taylor.

2008-09-08  Christian Dywan  <christian@imendio.com>

	Bug 550433 – g_test_init doesn't recognize --help

	* glib/gtestutils.c (parse_args): Add detailed --help output

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.18.0 ===

2008-09-02  Ryan Lortie  <desrt@desrt.ca>

	Bug 549771 – improved .gitignore for glib

	* docs/reference/.gitignore:
	* docs/reference/gio/.gitignore:
	* docs/reference/gobject/tmpl/.gitignore:
	* gio/.gitignore:
	* gio/tests/.gitignore:
	* glib/.gitignore:
	* glib/libcharset/.gitignore:
	* glib/tests/.gitignore:
	* gmodule/.gitignore:
	* gobject/.gitignore:
	* gobject/tests/.gitignore:
	* po/.gitignore:
	* tests/.gitignore: new files
	* .gitignore: remove 'build' (since it's part of glib now), add more
	useful things.

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* configure.in: Bump version to 2.18.0

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 550104 – trivial documentation fix for g_get_home_dir

	* glib/gutils.c (g_get_home_dir): Fix up the docs.

2008-09-02  Michael Natterer  <mitch@imendio.com>

	* glib/gchecksum.c (g_checksum_reset): add
	g_return_if_fail (checksum != NULL)
